--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
 body {
+  background-color: gainsboro;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+input:focus,
+button:focus {
+  outline: none;
+}
+
+.btn {
+  background-color: darkblue;
+  color: white;
+  font-weight: bold;
+  font-size: 100%;
+  border-radius: 12px;
+}
+.btn:hover {
+  opacity: 0.8;
+} /* Set a hover effect for the button */
+.header {
+  background-color: darkblue;
+  width: 100%;
+  margin: 0px;
+}
+.header_text {
+  color: white;
+  font-weight: bold;
+  padding: 10px 10px 10px 20px;
+  text-align: left;
+  font-family: sans-serif;
+  font-size: 150%;
+}
+
+.pg_body {
+  margin: 20px 30px;
+}
+.root {
+  background-color: white;
+  padding: 20px;
+  min-height: 300px;
 }
