--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,9 +35,10 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
-header {
+.searchContainer {
+  text-align: center;
   display: flex;
   justify-content: center;
 }
