--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .input_searchterm {
@@ -59,7 +60,6 @@
 .fa-search {
   position: relative;
   margin-right: -45px;
-  top: 10px;
   z-index: 10000;
 }
 
