Lists out episodes from a single show

--- a/src/components/PageLayout.module.scss
+++ b/src/components/PageLayout.module.scss
@@ -11,3 +11,9 @@
   margin: 20px 30px;
   background-color: white;
 }
+.startText {
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+  padding-bottom: 30px;
+}
