Cleaning up code and making variables for colors

--- a/src/components/ListOfShows.module.scss
+++ b/src/components/ListOfShows.module.scss
@@ -1,3 +1,6 @@
+// Page Styling
+@import "./layouts/_pageStyling";
+
 .showsContainer {
-  background-color: white;
+  background-color: $background-color;
 }
