--- a/src/components/SearchResults.module.scss
+++ b/src/components/SearchResults.module.scss
@@ -1,3 +1,6 @@
+// Page Styling
+@import "./layouts/_pageStyling";
+
 .searchResultsBlock {
   padding-top: 20px;
   width: 70%; /* TODO: figure out a standard width in pixels */
