--- a/src/components/SearchShowsForm.module.scss
+++ b/src/components/SearchShowsForm.module.scss
@@ -16,6 +16,16 @@
     border-radius: 12px !important;
     background-color: $input-color;
     border: 2px solid transparent;
+
+    // box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.2);
+  }
+  input.input_searchterm:-internal-autofill-selected {
+    background-color: $input-color !important;
+  }
+  input.input_searchterm:focus {
+    box-shadow: 0 0 10px cornflowerblue;
+    -webkit-box-shadow: 0 0 10px cornflowerblue;
+    -moz-box-shadow: 0 0 10px cornflowerblue;
   }
 
   .searchIcon {
