--- a/src/components/layouts/PageLayout.module.scss
+++ b/src/components/layouts/PageLayout.module.scss
@@ -7,6 +7,7 @@
   .contentWrapper {
     height: 100%;
     margin: 20px 30px;
+    padding-bottom: 30px;
     background-color: $background-color;
   }
   .startText {
