--- a/src/components/layouts/_pageStyling.scss
+++ b/src/components/layouts/_pageStyling.scss
@@ -1,14 +1,23 @@
-$header-color: darkblue;
-$header-text-color: white;
-$footer-color: darkblue;
-$footer-text-color: white;
+$primary-color: darkblue;
+$secondary-color: gainsboro;
+$tertiary-color: white;
+$quaternary-color: white;
 
-$background-color: white;
-$section-color: gainsboro;
-$section-border-color: darkblue;
+$header-color: $primary-color;
+$header-text-color: white;
+$header-link-text-color: white;
+$footer-color: $primary-color;
+$footer-text-color: white;
+$footer-link-text-color: cornflowerblue;
+
+$background-color: $tertiary-color;
+$section-color: $secondary-color;
+$section-border-color: $primary-color;
 $star-empty-color: lightgray;
 $star-solid-color: #f8ce0b;
 $error-color: red;
-$input-color: gainsboro;
-$button-color: darkblue;
+$input-color: $secondary-color;
+$button-color: $primary-color;
 $button-text-color: white;
+
+$gradient-top: silver; //#c0c0c0
