--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: gainsboro;
+  background-color: darkblue;
   margin: 0;
   height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -11,5 +11,5 @@ body {
 
 .root {
   height: 100%;
-  /* background-color: white; */
+  background-color: gainsboro;
 }
