--- a/src/components/SingleEpisode.module.scss
+++ b/src/components/SingleEpisode.module.scss
@@ -11,14 +11,14 @@
   margin-top: 30px;
   border: 1px solid $section-border-color;
   border-radius: 10px;
-
-  .btn_episode {
-    padding: 15px 15px;
-  }
+  box-shadow: 0px 0px 5px 1px $shadow-color;
 
   .episodeNumber {
     grid-area: epNumber;
     margin: 20px 0px 20px 20px;
+    padding: 15px 15px;
+    background-color: $button-color;
+    color: $button-text-color;
     border-radius: 6px;
     font-weight: bold;
   }
