Makes it responsive

--- a/src/components/SearchShowsForm.module.scss
+++ b/src/components/SearchShowsForm.module.scss
@@ -43,4 +43,21 @@
     font-weight: bold;
     color: $error-color;
   }
+
+  @media only screen and (max-width: $break1) {
+    .input_searchterm {
+      width: 55% !important;
+    }
+  }
+
+  @media only screen and (max-width: $break3) {
+    padding: 20px 10px 10px 10px;
+
+    .inputErrorMessage {
+      top: 60px;
+    }
+    .input_searchterm {
+      width: 75% !important;
+    }
+  }
 }
