--- a/src/components/layouts/_pageStyling.scss
+++ b/src/components/layouts/_pageStyling.scss
@@ -25,3 +25,8 @@ $button-inactive-color: $secondary-color;
 $gradient-top: silver; //#c0c0c0
 // $shadow-color: #737373;
 $shadow-color: rgba(115, 115, 115, 0.5);
+
+$break1: 900px;
+$break2: 800px;
+$break3: 700px;
+$break4: 600px;
