--- a/src/components/CurrentShow.module.scss
+++ b/src/components/CurrentShow.module.scss
@@ -7,4 +7,22 @@
   img {
     box-shadow: 0px 0px 10px 5px $shadow-color;
   }
+
+  @media only screen and (max-width: $break3) {
+    display: flex;
+    img {
+      box-shadow: 0px 0px 0px 0px $shadow-color;
+    }
+    .showInfoBlock {
+      padding-left: 10px;
+      align-items: flex-start;
+      h2 {
+        margin-top: 0px;
+        margin-bottom: 10px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    }
+  }
 }
