--- a/src/components/ListOfEpisodes.module.scss
+++ b/src/components/ListOfEpisodes.module.scss
@@ -6,11 +6,26 @@
 
   display: grid;
   grid-template-areas: "showInfo episodes";
-  grid-template-columns: 300px auto;
+  grid-template-columns: 300px 1fr;
   grid-column-gap: 20px;
 
   .episodesBlock {
     grid-area: episodes;
     padding-bottom: 30px;
+  }
+
+  @media only screen and (max-width: $break1) {
+    grid-template-columns: 210px 1fr;
+  }
+
+  @media only screen and (max-width: $break3) {
+    grid-template-areas: "showInfo" "episodes";
+    grid-template-columns: 1fr;
+    grid-column-gap: 0px;
+    margin-top: 10px;
+
+    .episodesBlock {
+      padding-bottom: 10px;
+    }
   }
 }
