--- a/src/components/Seasons.module.scss
+++ b/src/components/Seasons.module.scss
@@ -11,11 +11,15 @@
 
 .seasonsWrapper {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
 
   .title {
     align-self: center;
     font-weight: bold;
+  }
+  .seasonsBlock {
+    display: flex;
   }
   .btn_season {
     background-color: $button-inactive-color;
@@ -30,5 +34,9 @@
   .active {
     // background-color: $button-active-color;
     background-image: linear-gradient($gradient-top, $button-active-color);
+  }
+
+  @media only screen and (max-width: $break3) {
+    margin-top: 20px;
   }
 }
