--- a/src/components/layouts/Header.module.scss
+++ b/src/components/layouts/Header.module.scss
@@ -3,15 +3,17 @@
 
 header {
   background-color: $header-color;
-  width: 100%;
-  margin: 0px;
+  padding: 10px 10px 10px 20px;
 
   .header_text {
     color: $header-text-color;
     font-weight: bold;
-    padding: 10px 10px 10px 20px;
     text-align: left;
     font-family: sans-serif;
     font-size: 150%;
+  }
+
+  @media only screen and (max-width: $break3) {
+    padding: 10px;
   }
 }
