--- a/src/components/SingleShow.module.scss
+++ b/src/components/SingleShow.module.scss
@@ -12,8 +12,13 @@
   }
   .showInfo h1 {
     margin-top: 0px;
+    margin-bottom: 10px;
+  }
+  .showSummary {
+    margin-top: 10px;
   }
   .btn_episodes {
+    margin-top: 10px;
     padding: 10px 10px;
     background-image: linear-gradient($gradient-top, $button-color);
   }
@@ -37,6 +42,12 @@
 
     h1 {
       font-size: 1.5em;
+    }
+  }
+
+  @media only screen and (max-width: $break5) {
+    .showSummary {
+      display: none;
     }
   }
 }
